[gd_scene load_steps=11 format=3 uid="uid://c2pmpc3weqso2"]

[ext_resource type="Script" path="res://src/environment/tree/tree.gd" id="1_7qi6v"]
[ext_resource type="Material" uid="uid://ddgqn217e1hrc" path="res://assets/materials/wood.tres" id="2_lf5mj"]
[ext_resource type="Script" path="res://src/environment/tree/wood_trunk.gd" id="2_p1qev"]

[sub_resource type="Gradient" id="Gradient_v8v8g"]
offsets = PackedFloat32Array(0.2, 1)
colors = PackedColorArray(0.689626, 1, 0.696068, 1, 0, 0.440336, 0, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_sph5o"]
seed = 5
frequency = 0.07
fractal_gain = 1.0
domain_warp_enabled = true

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_bh315"]
seamless = true
seamless_blend_skirt = 1.0
color_ramp = SubResource("Gradient_v8v8g")
noise = SubResource("FastNoiseLite_sph5o")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tpglu"]
albedo_color = Color(0, 0.560784, 0, 1)
albedo_texture = SubResource("NoiseTexture2D_bh315")
grow_amount = -4.042
proximity_fade_distance = 21.31

[sub_resource type="SphereShape3D" id="SphereShape3D_bfamy"]
radius = 1.7

[sub_resource type="CylinderShape3D" id="CylinderShape3D_hpc1s"]
height = 3.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_c2je4"]
height = 4.0
radius = 2.0

[node name="Tree" type="Node3D"]
script = ExtResource("1_7qi6v")

[node name="BottomHalf" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.606528, 0)
use_collision = true
collision_layer = 2
collision_mask = 3
height = 1.0
sides = 32
material = ExtResource("2_lf5mj")

[node name="Bush" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.67787, 0)
collision_layer = 2
collision_mask = 3
mass = 20.0
inertia = Vector3(547.83, 0, 0)
sleeping = true
freeze = true

[node name="Mesh" type="CSGSphere3D" parent="Bush"]
radius = 2.0
material = SubResource("StandardMaterial3D_tpglu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Bush"]
shape = SubResource("SphereShape3D_bfamy")

[node name="WoodTrunk" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.40095, 0)
collision_layer = 2
collision_mask = 3
mass = 30.0
sleeping = true
freeze = true
script = ExtResource("2_p1qev")

[node name="Mesh" type="CSGCylinder3D" parent="WoodTrunk"]
collision_layer = 2
collision_mask = 3
height = 3.0
sides = 32
material = ExtResource("2_lf5mj")

[node name="WoodTrunkCollision" type="CollisionShape3D" parent="WoodTrunk"]
shape = SubResource("CylinderShape3D_hpc1s")

[node name="WoodInteractionArea" type="Area3D" parent="WoodTrunk"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.40095, 0)
collision_layer = 8
collision_mask = 8

[node name="WoodAreaCollision" type="CollisionShape3D" parent="WoodTrunk/WoodInteractionArea"]
shape = SubResource("CylinderShape3D_c2je4")

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
anchors_preset = -1
anchor_top = 0.912
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 394.0
offset_top = -45.976
offset_right = -394.0
offset_bottom = -76.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
show_percentage = false

[node name="Label" type="Label" parent="ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Chopping tree"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="area_shape_entered" from="WoodTrunk/WoodInteractionArea" to="WoodTrunk" method="_on_wood_interaction_area_area_shape_entered"]
[connection signal="area_shape_exited" from="WoodTrunk/WoodInteractionArea" to="." method="_on_wood_interaction_area_area_shape_exited"]
[connection signal="area_shape_exited" from="WoodTrunk/WoodInteractionArea" to="WoodTrunk" method="_on_wood_interaction_area_area_shape_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
